--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.7.0",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.7.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
@@ -58,6 +59,7 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-lottie": "^1.2.2",
     "@types/react-redux": "^6.0.12",
     "@types/react-router-dom": "^4.3.1",
     "@types/redux": "^3.6.0",
