--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-lottie": "^1.2.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.9.0",
     "redux": "^4.0.1",
     "resolve": "1.6.0",
     "source-map-loader": "^0.2.1",
@@ -65,6 +66,7 @@
     "@types/react-lottie": "^1.2.2",
     "@types/react-redux": "^6.0.12",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-transition-group": "^2.8.0",
     "@types/redux": "^3.6.0",
     "gh-pages": "^2.0.1",
     "redux-devtools-extension": "^2.13.7",
